Fix background color not filling parent and background color breaking on overflow

--- a/src/style.css
+++ b/src/style.css
@@ -50,11 +50,16 @@ body {
   flex-direction: column;
   align-items: center;
   min-width: fit-content;
-  min-height: 100%;
   margin-left: 2em;
   margin-right: 2em;
   padding: 2rem;
   text-align: center;
+}
+
+.scroll-container {
+  overflow-y: auto;
+  min-height: 100%;
+  max-height: 100%;
 }
 
 dialog {
@@ -237,6 +242,10 @@ input[type='checkbox']:checked::before {
 
 .full-width {
   width: 100%;
+}
+
+.full-height {
+  height: 100%;
 }
 
 .card {
